# setup.cfg相关文档可参考如下链接
# https://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files
[metadata]
# 项目名称，发布、安装时以此作为包名
name = arkf
# 作者姓名和邮箱地址
author = lovegoods
author_email = lovegoods@163.com
# 项目版本号，1.0以上版本才视为正式版
# 当项目正式发布时应当将版本号修改到1.0以上，且应当遵守以下规范
version = 0.5.0
# 项目概要描述信息，一句话让用户明白项目概要，不支持中文
description = ark open source
# 项目的详细描述内容和格式，包括readme和changelog等，通常使用md或rst等格式
long_description = file: README.md, CHANGELOG.md
long_description_content_type = text/markdown
# 项目的home页，通常设置为代码库地址，也可以设置为wiki或其他文档url
home_page = http://ark.baidu.com
# 开源授权协议，非对外开源的项目无需关注
license = MIT
# 项目类别，非对外开源的项目无需关注
# 从PyPI官方给出的列表中选择符合的内容进行填写
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifier =
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Topic :: System :: Installation/Setup
    Natural Language :: Chinese (Simplified)
    License :: OSI Approved :: MIT License
# 关键字，用于检索，方便用户搜索到你的项目
keywords =
    framework
    aiops

[files]
packages =
    ark
data_files =
    env = env/*

[entry_points]
# 项目可以通过以下配置将指定的函数变成命令行工具，允许用户直接执行
console_scripts =
    ark = ark.are.loader:main

[build_sphinx]
builders = html,man
source-dir = docs/source
build-dir = docs/_build
all-files = 1
warning-is-error = 1

[sdist]
dist_dir = output/dist
[bdist_wheel]
dist_dir = output/dist

